<?xml version="1.0"?>
<package>
  <name>rviz_layer</name>
  <version>2.1.3</version>
  <description>The rviz_layer package</description>
  <maintainer email="clement.lebihan@mail.fr">Clément LE BIHAN</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>jsk_rviz_plugins</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_recognition_utils</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>jsk_recognition_utils</run_depend>

  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
